fix: add get detail summarization by id
